--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
             background: url('header-background.jpg') no-repeat center center;
             background-size: cover;
             color: white;
-            padding: 20px;
+            padding: 10px;
             text-align: center;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
-        .logo {
-            font-size: 2em;
-            font-weight: bold;
+        .logo img {
+            width: 100px; /* Adjusted width */
+            height: 60px; /* Adjusted height */
         }
         .live-indicator {
             color: white;
