--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
             justify-content: space-between;
         }
         .logo img {
-            width: 100px; /* Adjusted width */
-            height: auto; /* Auto height to maintain aspect ratio */
+            width: 180px; /* Set the desired width */
+            height: 60px; /* Set the desired height */
+            object-fit: contain; /* Maintain aspect ratio */
         }
         .live-indicator {
             color: white;
@@ -168,10 +169,7 @@
         <p>Check out our handpicked playlist featuring the best holiday tunes to keep your spirits high!</p>
     </section>
     <section class="feature">
-        <h2>DJ Spotlight</h2>
-        <img src="Images/dj.jpg" alt="DJ Spotlight">
-        <p>Meet DJ Melody, our holiday special DJ, bringing you the best beats and festive vibes all season long!</p>
-    </section>
+        <h2>DJ Spotlight</</div>   
+ </section>
 </body>
 </html>
-
