--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: center; /* Center the logo horizontally */
         }
         .logo img {
             width: 180px; /* Set the desired width */
@@ -169,7 +169,9 @@
         <p>Check out our handpicked playlist featuring the best holiday tunes to keep your spirits high!</p>
     </section>
     <section class="feature">
-        <h2>DJ Spotlight</</div>   
- </section>
+        <h2>DJ Spotlight</h2>
+        <img src="Images/dj.jpg" alt="DJ Spotlight">
+        <p>Meet DJ Melody, our holiday special DJ, bringing you the best beats and festive vibes all season long!</p>
+    </section>
 </body>
 </html>
