--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
             margin-top: 0;
         }
         .feature img {
-            max-width: 100%;
-            height: auto;
+            max-width: 300px; /* Set the maximum width */
+            height: auto; /* Maintain aspect ratio */
             display: block;
-            margin-bottom: 10px;
+            margin: 0 auto 10px auto; /* Center image */
         }
         .feature p {
             margin: 10px 0;
@@ -149,9 +149,12 @@
         const spotlightData = [
             {
                 image: 'Images/Town.png',
-                description: 'Farmboy Studios has been streaming our radio station since October of this year and continues to be a proud partner with us. They develop Roblox prison games.'
+                description: 'Farmboy Studios has been streaming our radio station since October of this year and continues to be a proud partner with us. They specialize in developing immersive Roblox prison games, offering players unique and engaging experiences. With a dedicated team of developers, they bring creativity and innovation to the forefront of gaming. Their commitment to quality and community engagement makes them a standout partner for RTX Radio. Whether you’re a fan of intense prison breaks or intricate gameplay mechanics, Farmboy Studios consistently delivers top-notch content that captivates and entertains. We’re thrilled to have them as part of our community and look forward to many more collaborative ventures in the future.'
             },
-            // Add more spotlight data as needed
+            {
+                image: 'Images/Truck.jpg',
+                description: 'American Truck Simulator | Want to stream RTX Radio while trucking across America? You can easily add our stream to the in-game radio by pressing **R**. We proudly broadcast our station directly within the game, ensuring you have the best beats and tunes on your virtual journeys. Happy trucking! 🚛🎶'
+            }
         ];
 
         function rotateSpotlight() {
@@ -190,7 +193,7 @@
     <section class="feature">
         <h2>Community Spotlight</h2>
         <img id="spotlight-image" src="Images/Town.png" alt="Spotlight Image">
-        <p id="spotlight-description">Farmboy Studios has been streaming our radio station since October of this year and continues to be a proud partner with us. They develop Roblox prison games.</p>
+        <p id="spotlight-description">Farmboy Studios has been streaming our radio station since October of this year and continues to be a proud partner with us. They specialize in developing immersive Roblox prison games, offering players unique and engaging experiences. With a dedicated team of developers, they bring creativity and innovation to the forefront of gaming. Their commitment to quality and community engagement makes them a standout partner for RTX Radio. Whether you’re a fan of intense prison breaks or intricate gameplay mechanics, Farmboy Studios consistently delivers top-notch content that captivates and entertains. We’re thrilled to have them as part of our community and look forward to many more collaborative ventures in the future.</p>
     </section>
 </body>
 </html>
