--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             margin-top: 0;
         }
         .feature img {
-            max-width: 300px; /* Set the maximum width */
+            max-width: 200px; /* Set the maximum width */
             height: auto; /* Maintain aspect ratio */
             display: block;
             margin: 0 auto 10px auto; /* Center image */
@@ -149,7 +149,7 @@
         const spotlightData = [
             {
                 image: 'Images/Town.png',
-                description: 'Farmboy Studios has been streaming our radio station since October of this year and continues to be a proud partner with us. They specialize in developing immersive Roblox prison games, offering players unique and engaging experiences. With a dedicated team of developers, they bring creativity and innovation to the forefront of gaming. Their commitment to quality and community engagement makes them a standout partner for RTX Radio. Whether you’re a fan of intense prison breaks or intricate gameplay mechanics, Farmboy Studios consistently delivers top-notch content that captivates and entertains. We’re thrilled to have them as part of our community and look forward to many more collaborative ventures in the future.'
+                description: 'Farmboy Studios has been streaming our radio station since October and continues to be a proud partner. They specialize in developing immersive Roblox prison games, consistently delivering top-notch content that captivates and entertains. We’re thrilled to have them as part of our community and look forward to many more collaborative ventures.'
             },
             {
                 image: 'Images/Truck.jpg',
@@ -168,7 +168,7 @@
         }
 
         document.addEventListener('DOMContentLoaded', () => {
-            setInterval(rotateSpotlight, 3000); // Rotate every 3 seconds
+            setInterval(rotateSpotlight, 8000); // Rotate every 8 seconds
         });
     </script>
 </head>
@@ -193,7 +193,8 @@
     <section class="feature">
         <h2>Community Spotlight</h2>
         <img id="spotlight-image" src="Images/Town.png" alt="Spotlight Image">
-        <p id="spotlight-description">Farmboy Studios has been streaming our radio station since October of this year and continues to be a proud partner with us. They specialize in developing immersive Roblox prison games, offering players unique and engaging experiences. With a dedicated team of developers, they bring creativity and innovation to the forefront of gaming. Their commitment to quality and community engagement makes them a standout partner for RTX Radio. Whether you’re a fan of intense prison breaks or intricate gameplay mechanics, Farmboy Studios consistently delivers top-notch content that captivates and entertains. We’re thrilled to have them as part of our community and look forward to many more collaborative ventures in the future.</p>
+        <p id="spotlight-description">Farmboy Studios has been streaming our radio station since October and continues to be a proud partner. They specialize in developing immersive Roblox prison games, consistently delivering top-notch content that captivates and entertains. We’re thrilled to have them as part of our community and look forward to many more collaborative ventures.</p>
     </section>
 </body>
 </html>
+
