--- a/index.html
+++ b/index.html
@@ -13,65 +13,54 @@
             padding: 0;
         }
         header {
-            background: url('header-background.jpg') no-repeat center center;
-            background-size: cover;
+            background-color: #FF0000; /* Festive red color */
             color: white;
-            padding: 10px;
+            padding: 20px;
             text-align: center;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: space-between;
         }
         .logo img {
-            width: 180px; /* Set the desired width */
-            height: 60px; /* Set the desired height */
+            width: 150px; /* Adjusted width */
+            height: auto; /* Maintain aspect ratio */
             object-fit: contain; /* Maintain aspect ratio */
         }
-        .live-indicator {
-            color: white;
-            padding: 5px;
-            border-radius: 20px;
-            text-transform: uppercase;
-            font-weight: bold;
+        .navigation {
+            display: flex;
+            gap: 20px;
         }
-        .banner {
-            background-color: #DF0000;
+        .navigation a {
             color: white;
-            text-align: center;
-            padding: 20px;
-            margin: 20px 0;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .banner a {
-            color: #ffccbc;
             text-decoration: none;
             font-weight: bold;
         }
         .play-button {
-            background-color: #ff6f00;
+            background-color: #D32F2F; /* Darker red for contrast */
             color: white;
             padding: 15px;
             border: none;
-            border-radius: 50px;
+            border-radius: 50%;
             cursor: pointer;
-            font-size: 1em;
+            font-size: 1.5em;
             display: flex;
             align-items: center;
             justify-content: center;
             margin: 20px auto;
             text-align: center;
-            width: 200px;
+            width: 70px;
+            height: 70px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             transition: background-color 0.3s ease;
         }
         .play-button:hover {
-            background-color: #ff8f00;
+            background-color: #C62828;
         }
         .play-button img {
-            width: 20px;
-            height: 20px;
-            margin-right: 10px;
+            width: 30px;
+            height: 30px;
+            margin-right: 0;
         }
         .audio-player {
             text-align: center;
@@ -105,15 +94,25 @@
         .feature p {
             margin: 10px 0;
         }
+        .banner {
+            background-color: #D32F2F;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            margin: 20px 0;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .banner a {
+            color: #ffccbc;
+            text-decoration: none;
+            font-weight: bold;
+        }
     </style>
     <script>
         async function fetchStatus() {
             try {
-                console.log('Fetching status...');
-                const response = await fetch('status.json'); // Ensure this path is correct
-                console.log('Response received:', response);
+                const response = await fetch('status.json');
                 const data = await response.json();
-                console.log('Data parsed:', data);
                 const statusElement = document.getElementById('live-indicator');
                 if (data.status === 'on') {
                     statusElement.textContent = 'LIVE: On Air';
@@ -136,11 +135,11 @@
             var playIcon = document.getElementById('play-icon');
             if (audio.paused) {
                 audio.play();
-                playButton.innerHTML = '<img id="play-icon" src="Images/Pause.png" alt="Pause Icon"> Pause';
+                playButton.innerHTML = '<img id="play-icon" src="Images/Pause.png" alt="Pause Icon">';
                 status.textContent = 'Playing';
             } else {
                 audio.pause();
-                playButton.innerHTML = '<img id="play-icon" src="Images/Play.png" alt="Play Icon"> Play';
+                playButton.innerHTML = '<img id="play-icon" src="Images/Play.png" alt="Play Icon">';
                 status.textContent = 'Paused';
             }
         }
@@ -177,6 +176,16 @@
         <div class="logo">
             <img src="Images/Frame 294.png" alt="RTX Radio Logo">
         </div>
+        <nav class="navigation">
+            <a href="#">For You</a>
+            <a href="#">Your Library</a>
+            <a href="#">Live Radio</a>
+            <a href="#">Podcasts</a>
+            <a href="#">Artist Radio</a>
+            <a href="#">Playlists</a>
+            <a href="#">News</a>
+            <a href="#">More</a>
+        </nav>
         <div id="live-indicator" class="live-indicator">Loading...</div>
     </header>
     <section class="banner">
@@ -186,7 +195,7 @@
     <section class="audio-player">
         <audio id="audio" src="https://azura.typicalmedia.net/listen/rolly_tune_xperience_(rtx)/stream" type="audio/mpeg"></audio>
         <button id="play-button" class="play-button" onclick="togglePlay()">
-            <img id="play-icon" src="Images/Play.png" alt="Play Icon"> Play
+            <img id="play-icon" src="Images/Play.png" alt="Play Icon">
         </button>
         <div id="status" class="status">Paused</div>
     </section>
@@ -197,4 +206,5 @@
     </section>
 </body>
 </html>
+
 
