--- a/index.html
+++ b/index.html
@@ -15,21 +15,20 @@
         header {
             background-color: #FF0000; /* Festive red color */
             color: white;
-            padding: 20px;
-            text-align: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            padding: 10px 20px;
             display: flex;
             align-items: center;
             justify-content: space-between;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         .logo-container {
             display: flex;
             align-items: center;
         }
         .logo img {
-            width: 150px; /* Adjusted width */
-            height: auto; /* Maintain aspect ratio */
-            object-fit: contain; /* Maintain aspect ratio */
+            width: 150px;
+            height: auto;
+            object-fit: contain;
         }
         .logo-text {
             font-size: 1.5em;
@@ -37,7 +36,7 @@
             margin-left: 10px;
         }
         .play-button-header {
-            background-color: #D32F2F; /* Darker red for contrast */
+            background-color: #D32F2F;
             color: white;
             padding: 10px;
             border: none;
@@ -73,7 +72,7 @@
             text-decoration: underline;
         }
         .play-button {
-            background-color: #D32F2F; /* Darker red for contrast */
+            background-color: #D32F2F;
             color: white;
             padding: 15px;
             border: none;
@@ -96,7 +95,6 @@
         .play-button img {
             width: 30px;
             height: 30px;
-            margin-right: 0;
         }
         .audio-player {
             text-align: center;
@@ -107,7 +105,7 @@
             max-width: 600px;
         }
         .status {
-            margin-top: 20px;
+            margin-top: 10px;
             font-size: 1.2em;
             text-align: center;
         }
@@ -115,17 +113,19 @@
             padding: 20px;
             background-color: #f7f7f7;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            margin: 20px 0;
-            text-align: center; /* Center content */
+            margin: 20px auto;
+            text-align: center;
+            max-width: 800px; /* Center content and limit width */
         }
         .feature h2 {
             margin-top: 0;
+            color: #D32F2F;
         }
         .feature img {
-            max-width: 200px; /* Set the maximum width */
-            height: auto; /* Maintain aspect ratio */
+            max-width: 200px;
+            height: auto;
             display: block;
-            margin: 0 auto 10px auto; /* Center image */
+            margin: 0 auto 10px auto;
         }
         .feature p {
             margin: 10px 0;
@@ -135,8 +135,9 @@
             color: white;
             text-align: center;
             padding: 20px;
-            margin: 20px 0;
+            margin: 20px auto;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            max-width: 800px; /* Center content and limit width */
         }
         .banner a {
             color: #ffccbc;
@@ -245,7 +246,7 @@
     </section>
     <section class="feature">
         <h2>Community Spotlight</h2>
-        <img id="spotlight-image" src="Images/Town.png" alt="Spotlight Image">
+        <img id="spotlight-image" src="Images/Town.png" alt="="Spotlight Image">
         <p id="spotlight-description">Farmboy Studios has been streaming our radio station since October and continues to be a proud partner. They specialize in developing immersive Roblox prison games, consistently delivering top-notch content that captivates and entertains. We’re thrilled to have them as part of our community and look forward to many more collaborative ventures.</p>
     </section>
 </body>
