--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
             </button>
         </div>
         <nav class="navigation">
-            <a href="#">News</a>
-            <a href="#" class="active">Live Radio</a>
+            <a href="#" class="active">News</a>
+            <a href="#">Live Radio</a>
             <a href="#">More</a>
         </nav>
         <div id="live-indicator" class="live-indicator">Loading...</div>
