--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
         .navigation {
             display: flex;
             gap: 20px;
+            justify-content: center;
+            flex: 1;
         }
         .navigation a {
             color: white;
@@ -138,6 +140,9 @@
             margin: 20px auto;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             max-width: 800px; /* Center content and limit width */
+        }
+        .banner p {
+            font-weight: bold; /* Make the text bold */
         }
         .banner a {
             color: #ffccbc;
@@ -230,7 +235,7 @@
         <div id="live-indicator" class="live-indicator">Loading...</div>
     </header>
     <section class="banner">
-        <p>Streaming Holiday Cheer: Non-stop Beats, Joyful Vibes!</p>
+        <p><strong>Streaming Holiday Cheer</strong>: Non-stop Beats, Joyful Vibes!</p>
         <a href="#">Listen Now</a>
     </section>
     <section class="audio-player">
@@ -242,7 +247,7 @@
     </section>
     <section class="feature">
         <h2>Community Spotlight</h2>
-        <img id="spotlight-image" src="Images/Town.png" alt="="Spotlight Image">
+        <img id="spotlight-image" src="Images/Town.png" alt="Spotlight Image">
         <p id="spotlight-description">Farmboy Studios has been streaming our radio station since October and continues to be a proud partner. They specialize in developing immersive Roblox prison games, consistently delivering top-notch content that captivates and entertains. We’re thrilled to have them as part of our community and look forward to many more collaborative ventures.</p>
     </section>
 </body>
