--- a/index.html
+++ b/index.html
@@ -77,10 +77,6 @@
             text-align: center;
             margin: 20px auto;
         }
-        audio {
-            width: 100%;
-            max-width: 600px;
-        }
         .play-button {
             background-color: #D32F2F;
             color: white;
@@ -119,20 +115,43 @@
             font-size: 1.2em;
             text-align: center;
         }
+        .feature {
+            padding: 20px;
+            background-color: #f7f7f7;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+            text-align: center;
+            max-width: 800px;
+        }
+        .feature h2 {
+            margin-top: 0;
+            color: #D32F2F;
+        }
+        .feature img {
+            max-width: 200px;
+            height: auto;
+            display: block;
+            margin: 0 auto 10px auto;
+        }
+        .feature p {
+            margin: 10px 0;
+        }
     </style>
     <script>
         function togglePlay() {
             var audio = document.getElementById('audio');
             var playButton = document.getElementById('play-button');
             var status = document.getElementById('status');
-            var playIcon = document.getElementById('play-icon');
+            var playIconHeader = document.getElementById('play-icon-header');
             if (audio.paused) {
                 audio.play();
-                playButton.innerHTML = '<img id="play-icon" src="Images/Pause.png" alt="Pause Icon">';
+                playButton.innerHTML = '<img src="Images/Pause.png" alt="Pause Icon">';
+                playIconHeader.src = 'Images/Pause.png';
                 status.textContent = 'Playing';
             } else {
                 audio.pause();
-                playButton.innerHTML = '<img id="play-icon" src="Images/Play.png" alt="Play Icon">';
+                playButton.innerHTML = '<img src="Images/Play.png" alt="Play Icon">';
+                playIconHeader.src = 'Images/Play.png';
                 status.textContent = 'Paused';
             }
         }
@@ -141,6 +160,32 @@
             var audio = document.getElementById('audio');
             audio.volume = value / 100;
         }
+
+        let spotlightIndex = 0;
+        const spotlightData = [
+            {
+                image: 'Images/Town.png',
+                description: 'Farmboy Studios has been streaming our radio station since October and continues to be a proud partner. They specialize in developing immersive Roblox prison games, consistently delivering top-notch content that captivates and entertains. We’re thrilled to have them as part of our community and look forward to many more collaborative ventures.'
+            },
+            {
+                image: 'Images/Truck.jpg',
+                description: 'American Truck Simulator | Want to stream RTX Radio while trucking across America? You can easily add our stream to the in-game radio by pressing **R**. We proudly broadcast our station directly within the game, ensuring you have the best beats and tunes on your virtual journeys. Happy trucking! 🚛🎶'
+            }
+        ];
+
+        function rotateSpotlight() {
+            const spotlightImage = document.getElementById('spotlight-image');
+            const spotlightDescription = document.getElementById('spotlight-description');
+
+            spotlightIndex = (spotlightIndex + 1) % spotlightData.length;
+
+            spotlightImage.src = spotlightData[spotlightIndex].image;
+            spotlightDescription.textContent = spotlightData[spotlightIndex].description;
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            setInterval(rotateSpotlight, 8000);
+        });
     </script>
 </head>
 <body>
@@ -150,6 +195,9 @@
                 <img src="Images/Frame 294.png" alt="RTX Radio Logo">
             </div>
             <div class="logo-text">RTX Radio</div>
+            <button class="play-button-header" onclick="togglePlay()">
+                <img id="play-icon-header" src="Images/Play.png" alt="Play Icon">
+            </button>
         </div>
         <nav class="navigation">
             <a href="#">For You</a>
@@ -175,6 +223,11 @@
             oninput="setVolume(this.value)"
         />
         <p>Volume</p>
+    </section>
+    <section class="feature">
+        <h2>Community Spotlight</h2>
+        <img id="spotlight-image" src="Images/Town.png" alt="Spotlight Image">
+        <p id="spotlight-description">Farmboy Studios has been streaming our radio station since October and continues to be a proud partner. They specialize in developing immersive Roblox prison games, consistently delivering top-notch content that captivates and entertains. We’re thrilled to have them as part of our community and look forward to many more collaborative ventures.</p>
     </section>
 </body>
 </html>
